Updated login,register,splash fragments. Added bottom navigation

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="@string/logout"
+        android:text="@string/logoutText"
         android:backgroundTint="#55A935"
         >
 
