--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             android:hint="Enter password"
+            android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -67,7 +68,7 @@
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btn_login"
+        android:text="@string/loginText"
         android:layout_gravity="center"
         android:textColor="@color/white"
         android:fontFamily="@font/poppins_semibold"
@@ -83,7 +84,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:fontFamily="@font/poppins_semibold"
-        android:text="@string/click_here_to_register"
+        android:text="@string/clickToRegisterText"
         android:textColor="#55A935"
         android:textSize="16sp"
         android:layout_marginTop="20dp">
