--- a/app/src/main/res/layout/activity_slider_page.xml
+++ b/app/src/main/res/layout/activity_slider_page.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:background="@drawable/splash1"
+    android:background="@drawable/ss2"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashScreen2">
+    tools:context=".SliderPage">
 
     <TextView
         android:id="@+id/quote"
