--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -92,6 +92,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:textStyle="bold"
         android:textSize="16sp"
+        android:paddingHorizontal="40dp"
         android:backgroundTint="#F29F05">
 
     </Button>
