--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -10,13 +10,25 @@
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/informationTab"
+        android:title="Information"
+        android:icon="@drawable/baseline_list_24"/>
+    <item
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/manageTab"
         android:title="Manage"
         android:icon="@drawable/baseline_add_circle_24"/>
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/informationTab"
-        android:title="Information"
-        android:icon="@drawable/baseline_list_24"/>
+        android:id="@+id/notifTab"
+        android:title="Notifications"
+        android:icon="@drawable/baseline_notifications_24"/>
+    <item
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/profileTab"
+        android:title="Profile"
+        android:icon="@drawable/baseline_person_24"/>
 </menu>
