--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManageFragment"
-    android:background="@color/teal">
+    tools:context=".ManageFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -12,5 +11,22 @@
         android:layout_height="match_parent"
         android:text="Manage"
         android:textSize="30sp"/>
+
+    <ImageButton
+        android:id="@+id/manageCropButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/managecrop"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="30dp"/>
+
+    <ImageButton
+        android:id="@+id/manageSoilButton"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:background="@color/teal"
+        android:layout_marginTop="300dp"
+        android:layout_marginStart="30dp"/>
+
 
 </FrameLayout>
