--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
+            android:drawableLeft="@drawable/user"
             android:fontFamily="@font/poppins_semibold"
             >
         </com.google.android.material.textfield.TextInputEditText>
@@ -49,6 +50,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="20dp"
+            android:drawableLeft="@drawable/user"
             android:fontFamily="@font/poppins_semibold"
             >
         </com.google.android.material.textfield.TextInputEditText>
@@ -116,6 +118,6 @@
         android:layout_height="215dp"
         android:layout_gravity="center"
         app:srcCompat="@drawable/circle_group"
-        android:layout_marginTop="170dp"/>
+        android:layout_marginTop="190dp"/>
 
 </LinearLayout>
