Updated info tab, strings, validation, profile tab

--- a/app/src/main/res/values/crop_array.xml
+++ b/app/src/main/res/values/crop_array.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="dropdown_options">
+        <item>Select Crop Type</item>
         <item>Kangkong (Water Spinach)</item>
         <item>Talong (Eggplant)</item>
         <item>Sitaw (String Beans)</item>
