--- a/app/src/main/res/layout/activity_otppage.xml
+++ b/app/src/main/res/layout/activity_otppage.xml
@@ -68,7 +68,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="200dp"
         android:layout_marginStart="-250dp"
-        android:text="test button"
+        android:text="Proceed"
         android:id="@+id/testButton"/>
 
 
