--- a/app/src/main/res/layout/activity_soil_planning.xml
+++ b/app/src/main/res/layout/activity_soil_planning.xml
@@ -1,5 +1,199 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    tools:context=".SoilPlanning">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/menuBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        >
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            >
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:src="@drawable/icrop_logo_v2"
+                android:scaleType="centerInside"
+                android:layout_gravity="center"
+                />
+
+            <!-- Solid bottom border -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#F5F5F5"
+                android:layout_gravity="bottom"
+                />
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/formCropPlant"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/form_circle_bg"
+        android:layout_margin="16dp"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@id/menuBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+        <TextView
+            android:id="@+id/textSoil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Soil Planning"
+            android:fontFamily="@font/poppins_semibold"
+            android:textSize="30sp"
+            android:textColor="#55a935"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inFieldCropType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/baseline_keyboard_arrow_down_24"
+            app:layout_constraintTop_toBottomOf="@+id/textSoil"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/inputSoilType"
+                android:hint="Soil Type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="true"
+                android:focusableInTouchMode="false"
+                android:inputType="none"
+                android:fontFamily="@font/poppins_semibold"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+        <Spinner
+            android:id="@+id/soilSpinner"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/transparent"
+            android:spinnerMode="dialog"
+            android:entries="@array/soil_textures"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inFieldPlantDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/inFieldCropType"
+
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/soilTexture"
+                android:hint="Texture (Soil Proportions)"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inFieldPhLevel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/baseline_keyboard_arrow_down_24"
+            app:layout_constraintTop_toBottomOf="@id/inFieldPlantDate"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/inPhLevel"
+                android:hint="Select pH Level"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="true"
+                android:focusableInTouchMode="false"
+                android:inputType="none"
+                android:fontFamily="@font/poppins_semibold"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+        <Spinner
+            android:id="@+id/ph_levels"
+            android:entries="@array/ph_level_options"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/transparent"
+            android:spinnerMode="dialog"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inFieldHarvestDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/inFieldPhLevel"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/wettingCycle"
+                android:hint="Wetting Cycle (Days)"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <Button
+            android:id="@+id/submitSoilReport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="#55a935"
+            android:fontFamily="@font/poppins_semibold"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:text="Submit Report"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inFieldHarvestDate"
+            app:layout_constraintVertical_bias="0.14" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+<!--
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -75,3 +269,4 @@
         android:layout_marginTop="400dp"/>
 
 </RelativeLayout>
+-->
